# workbench

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
documentation/: claude-code-workbench-design.md  claude-code-workbench-development-plan.md
documentation/design/: Workbench Mockup.html
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  torn.json
src-tauri/icons/: icon.icns
src-tauri/src/: accel.rs  attention.rs  lib.rs  main.rs
src-tauri/src/db/: .gitkeep  mod.rs
src-tauri/src/fs/: mod.rs
src-tauri/src/git/: .gitkeep  mod.rs
src-tauri/src/hooks/: .gitkeep  events.rs  install.rs  mod.rs  server.rs
src-tauri/src/layout/: mod.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/pty/: .gitkeep  mod.rs
src-tauri/src/registry/: .gitkeep  mod.rs
src-tauri/src/remote/: index.html  mod.rs  server.rs
src-tauri/src/remote/pwa/: index.html  manifest.webmanifest  sw.js
src-tauri/src/skills/: mod.rs
src-tauri/src/statusline/: .gitkeep  mod.rs
src-tauri/src/sys/: mod.rs
src-tauri/src/transcript/: .gitkeep  mod.rs
src/ipc/: .gitkeep  attention.ts  fs.ts  git.ts  hooks.ts  layout.ts  mcp.ts  os.ts  prefs.ts  pty.ts  registry.ts  remote.ts  sessions.ts  skills.ts  transcript.ts  usageLimits.ts
src/keyboard/: .gitkeep  bus.ts  commands.ts  index.ts  keymap.ts  useGlobalKeys.ts
src/panels/: .gitkeep  AppearanceMenu.tsx  CommandPalette.tsx  Console.tsx  ConsoleArea.tsx  ConsolePanel.tsx  KeymapEditor.tsx  NotificationsMenu.tsx  PresetsBar.tsx  PreviewPanel.tsx  QueuePromptDialog.tsx  RemoteAccessMenu.tsx  RemoteMirror.tsx  ResumePicker.tsx  Shell.tsx  StubPanels.tsx  TemplateLibrary.tsx  Workspace.tsx  keymapFormat.ts  queueDialogControl.ts  terminalPool.ts
src/panels/Diff/: UnifiedDiff.tsx  index.tsx
src/panels/Editor/: CodeMirrorView.tsx  FileTree.tsx  HtmlPreview.tsx  MarkdownPreview.tsx  PreviewPane.tsx  index.tsx  language.ts  markdown.ts  markdownScroll.ts  scrollMemory.ts
src/panels/Git/: index.tsx
src/panels/InstanceManager/: InlineEdit.tsx  InstanceCard.tsx  InstanceDialog.tsx  InstanceManager.tsx  Modal.tsx  ProjectDialog.tsx  RemoteCommandTerminal.tsx  accent.ts  index.tsx  status.ts
src/panels/MCPManager/: RawJsonDialog.tsx  ServerDialog.tsx  index.tsx
src/panels/SkillManager/: SkillDialog.tsx  index.tsx
src/state/: .gitkeep  activeProject.ts  appearance.ts  consoles.ts  diffs.ts  dock.ts  editors.ts  git.ts  layout.ts  mcp.ts  notifications.ts  permissionMode.ts  presets.ts  queue.ts  registry.ts  remoteActions.ts  remoteServer.ts  resumePicker.ts  shells.ts  skills.ts  status.ts  tearoff.ts  templates.ts  usage.ts  usageLimits.ts  worktree.ts
src/theme/: Panel.tsx  Spinner.tsx  codemirror.ts  dockview.css  global.css  glyphs.ts  index.ts  markdown.css  tokens.ts
src/torn/: TornWindow.tsx
src/util/: format.ts
