[package]
name = "workbench"
version = "0.1.0"
description = "A cockpit for supervising multiple Claude Code agents across projects."
authors = ["Workbench"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
which = "7"
# Phase 2: the local hook bridge (design §4.4). axum on 127.0.0.1 receives the
# `http` hooks Claude Code POSTs; tokio supplies the listener axum serves on (we
# run it on Tauri's own async runtime).
axum = "0.8"
tokio = { version = "1", features = ["net"] }

