[package]
name = "workbench"
version = "0.1.0"
description = "A cockpit for supervising multiple Claude Code agents across projects."
authors = ["Workbench"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
which = "7"
# Phase 2: the local hook bridge (design §4.4). axum on 127.0.0.1 receives the
# `http` hooks Claude Code POSTs; tokio supplies the listener axum serves on (we
# run it on Tauri's own async runtime). Phase 4 (step 4.3) reuses both for the
# remote access server: `axum`'s `ws` feature for the live-status WebSocket, and
# tokio `sync` for the broadcast/oneshot channels that fan snapshots to clients and
# stop the server gracefully.
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["net", "sync", "macros"] }
# Step 4.3: enumerate local network interfaces to find the Tailscale address
# (100.64.0.0/10) the remote server binds to — we never bind broader than the tailnet.
if-addrs = "0.13"

# Windows-only: intercept WebView2 accelerator keys so we can suppress the engine's
# built-in reload shortcuts (F5 / Ctrl+R / Ctrl+Shift+R), which would otherwise
# reload the whole renderer and drop every live console (see `accel` module). Pinned
# to the versions Tauri 2 already resolves (Cargo.lock) so we share one compiled copy.
[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_UI_Input_KeyboardAndMouse"] }

